--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,26 +1,38 @@
 @font-face {
-    font-family: 'Manrope';
-    src: url('Manrope-Regular.eot');
-    src: url('Manrope-Regular.eot?#iefix') format('embedded-opentype'),
-        url('Manrope-Regular.woff2') format('woff2'),
-        url('Manrope-Regular.woff') format('woff'),
-        url('Manrope-Regular.ttf') format('truetype'),
-        url('Manrope-Regular.svg#Manrope-Regular') format('svg');
+    font-family: 'Manrope3';
+    src: url('../fonts/Manrope3-Regular.eot');
+    src: url('../fonts/Manrope3-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Manrope3-Regular.woff2') format('woff2'),
+        url('../fonts/Manrope3-Regular.woff') format('woff'),
+        url('../fonts/Manrope3-Regular.ttf') format('truetype'),
+        url('../fonts/Manrope3-Regular.svg#Manrope3-Regular') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Manrope';
-    src: url('Manrope-Bold.eot');
-    src: url('Manrope-Bold.eot?#iefix') format('embedded-opentype'),
-        url('Manrope-Bold.woff2') format('woff2'),
-        url('Manrope-Bold.woff') format('woff'),
-        url('Manrope-Bold.ttf') format('truetype'),
-        url('Manrope-Bold.svg#Manrope-Bold') format('svg');
+    font-family: 'Manrope3B';
+    src: url('../fonts/Manrope3-Bold.eot');
+    src: url('../fonts/Manrope3-Bold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Manrope3-Bold.woff2') format('woff2'),
+        url('../fonts/Manrope3-Bold.woff') format('woff'),
+        url('../fonts/Manrope3-Bold.ttf') format('truetype'),
+        url('../fonts/Manrope3-Bold.svg#Manrope3-Bold') format('svg');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
+@font-face {
+    font-family: 'Manrope3L';
+    src: url('../fonts/Manrope3-Light.eot');
+    src: url('../fonts/Manrope3-Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/Manrope3-Light.woff2') format('woff2'),
+        url('../fonts/Manrope3-Light.woff') format('woff'),
+        url('../fonts/Manrope3-Light.ttf') format('truetype'),
+        url('../fonts/Manrope3-Light.svg#Manrope3-Light') format('svg');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
