--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ span {
     background-position: 50% 0;
     background-size: cover;
     color: #ffffff;
+    overflow: hidden;
 }
 .data-h {
     font-size: 22px;
@@ -308,12 +309,13 @@ p {
     padding-bottom: 120px;
 }
 .on_air {
-    background-image: url('../img/speaker-bg.png');
+    background-image: url(../img/speaker-bg.png);
     background-repeat: no-repeat;
     background-position: 50% 0;
     background-size: cover;
     color: #ffffff;
     padding-bottom: 100px;
+    margin-bottom: 50px;
 }
 .on_air h2 {
     font-size: 50px;
