--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,23 @@
         bottom: -145px;
         left: -110px;
     }
+    .tnx-man {
+        top: 18px;
+        left: -259px;
+    }
+    .tnx-name {
+        bottom: 117px;
+        left: -43px;
+    }
+    .block3 {
+        margin-top: 40px;
+        width: 890px;
+        height: 166px;
+        background-color: #ffffff;
+        box-shadow: 0 30px 60px rgb(0 0 0 / 4%);
+        position: relative;
+        z-index: 3;
+    }
     .feedback {
         background-image: url(../img/ipad.png);
         background-repeat: no-repeat;
@@ -15,6 +32,14 @@
     }
 }
 @media (max-width:1200px) {
+    .tnx-man {
+        top: 5px;
+        left: -338px;
+    }
+    .tnx-name {
+        bottom: 165px;
+        left: -232px;
+    }
     .feedback {
         background-image: url(../img/ipad.png);
         background-repeat: no-repeat;
@@ -59,6 +84,17 @@
     }
 }
 @media (max-width:992px) {
+    .tnx-name {
+        bottom: auto;
+        left: auto;
+        right: 0;
+        top: 800px;
+    }
+    .tnx-man {
+        top: 555px;
+        left: auto;
+        right: 148px;
+    }
     .result p br {
         display: none;
     }
@@ -146,8 +182,78 @@
     .result p br {
         display: none;
     }
+    .block3 {
+        margin-top: 40px;
+        width: 700px;
+        height: 166px;
+        background-color: #ffffff;
+        box-shadow: 0 30px 60px rgb(0 0 0 / 4%);
+        position: relative;
+        z-index: 3;
+    }
+    .block3::before {
+        content: "";
+        z-index: 2;
+        position: absolute;
+        width: 690px;
+        height: 156px;
+        border: 1px solid #000000;
+        opacity: 0.04;
+        top: 5px;
+        right: 5px;
+    }
+    .face, .tg, .vk {
+        width: 200px;
+    }
+    .header-tnx h1 br {
+        display: none;
+    }
+    .tnx-man {
+        top: 867px;
+        left: auto;
+        right: 100px;
+        width: 500px;
+    }
+    .header-tnx {
+        padding-bottom: 705px;
+    }
+    .tnx-name {
+        bottom: auto;
+        left: auto;
+        right: 307px;
+        top: 1417px;
+    }
+
 }
 @media (max-width:769px) {
+    h1 {
+        font-size: 40px;
+        font-weight: 700;
+        margin-top: 116px;
+        line-height: 68px;
+    }
+    h1 br {
+        display: none;
+    }
+    h2 {
+        text-align: center;
+        color: #1e1d1b;
+        font-size: 39px;
+    }
+    .name {
+        top: 739px;
+        left: auto;
+        right: 167px;
+    }
+    .man {
+        top: 374px;
+        right: 63px;
+        width: 350px;
+        left: auto;
+    }
+    .header-bottom {
+        padding-bottom: 500px;
+    }
     .none_m {
         display: none !important;
     }
@@ -188,7 +294,7 @@
         margin-bottom: 29px;
     }
     .header-bottom {
-        padding-bottom: 100px;
+        padding-bottom: 521px;
     }
     h2 {
         text-align: center;
@@ -257,8 +363,38 @@
     .result .button {
         margin-top: 10px;
     }
+    .header-tnx h1 {
+        font-size: 47px;
+        line-height: 76px;
+        width: 577px;
+        margin-top: 70px;
+    }
+    .header-tnx p {
+        margin-top: 40px;
+        font-size: 28px;
+        line-height: 46px;
+        margin-bottom: 25px;
+        width: 577px;
+    }
+    .core2 {
+        flex-direction: column;
+    }
+    .core2 a {
+        margin-bottom: 30px;
+    }
 }
 @media (max-width:576px) {
+    .man {
+        top: 301px;
+        right: 63px;
+        width: 350px;
+        left: auto;
+    }
+    .name {
+        top: 669px;
+        left: auto;
+        right: 167px;
+    }
     .feedback {
         background-image: none;
     }
@@ -315,7 +451,7 @@
         color: #1e1d1b;
     }
     .header-bottom {
-        padding-bottom: 50px;
+        padding-bottom: 515px;
     }
     .you_now {
         padding-top: 50px;
@@ -483,12 +619,37 @@
         margin-bottom: 30px;
     }
     .button_s {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        margin-left: 20px;
+    }
+}
+@media (max-width:491px) {
+    .man {
+        top: 312px;
+        right: 18px;
+        width: 350px;
+        left: auto;
+    }
+    .name {
+        top: 674px;
+        left: auto;
+        right: 93px;
+    }
+    .header-bottom {
+        padding-bottom: 500px;
     }
 }
 @media (max-width:425px) {
+    .man {
+        top: 271px;
+        right: -11px;
+        width: 350px;
+        left: auto;
+    }
+    .name {
+        top: 640px;
+        left: auto;
+        right: 29px;
+    }
     .cifra {
         font-size: 30px;
         font-weight: 400;
@@ -514,7 +675,7 @@
         left: -29px;
     }
     h1 {
-        font-size: 25px;
+        font-size: 30px;
         font-weight: 700;
         margin-top: 45px;
         line-height: 53px;
@@ -544,11 +705,11 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0 20px;
-        width: 365px;
+        padding: 0;
+        width: 330px;
     }
     .block {
-        width: 320px;
+        width: 350px;
         box-shadow: 0 30px 60px rgb(0 0 0 / 4%);
         background-color: #fff;
         height: 760px;
@@ -558,7 +719,7 @@
         content: "";
         z-index: 2;
         position: absolute;
-        width: 310px;
+        width: 340px;
         height: 750px;
         border: 1px solid #000000;
         opacity: 0.04;
@@ -612,7 +773,7 @@
     .accept {
         padding-left: 0px;
         width: 325px;
-        margin-left: 52px;
+        margin-left: 30px;
     }
     .on_air h2 {
         font-size: 28px;
